<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/moscow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:textSize="24sp"
        android:text="@string/temp_true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_city_name" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/hum"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_feeling"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_humidity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/fourzerozerozero"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_humidity"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_feeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/feels_like"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_wind_direction"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_feeling1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/temp"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_feeling"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="120dp"
        android:text="@string/wind_direct_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginEnd="40dp"
        android:text="@string/wind_direct"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wind_direction"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>